--- a/daterangepicker.css
+++ b/daterangepicker.css
@@ -15,6 +15,8 @@
   font-family: arial;
   font-size: 15px;
   line-height: 1em;
+  border-radius: 8px;
+  box-shadow: 0 12px 26px 0 rgba(0, 0, 0, 0.25);
 }
 
 .daterangepicker:before, .daterangepicker:after {
@@ -144,19 +146,25 @@
   -webkit-transform: rotate(135deg);
 }
 
+.daterangepicker .calendar-table tr {
+  margin-bottom: 4px;
+}
 .daterangepicker .calendar-table th, .daterangepicker .calendar-table td {
   white-space: nowrap;
   text-align: center;
   vertical-align: middle;
-  min-width: 32px;
-  width: 32px;
-  height: 24px;
-  line-height: 24px;
-  font-size: 12px;
+  width: 28px;
+  height: 28px;
+  font-size: 0.88em;
   border-radius: 4px;
   border: 1px solid transparent;
   white-space: nowrap;
   cursor: pointer;
+  font-weight: normal;
+}
+.daterangepicker .calendar-table th {
+  color: #5e6163;
+  opacity: 0.4;
 }
 
 .daterangepicker .calendar-table {
@@ -168,8 +176,8 @@
 .daterangepicker .calendar-table table {
   width: 100%;
   margin: 0;
-  border-spacing: 0;
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0 2px;
 }
 
 .daterangepicker td.available:hover, .daterangepicker th.available:hover {
@@ -190,22 +198,33 @@
 }
 
 .daterangepicker td.in-range {
-  background-color: #ebf4f8;
+  background-color: #357ebd;
   border-color: transparent;
-  color: #000;
+  color: rgba(255, 255, 255, 0.6);
   border-radius: 0;
 }
-
+.daterangepicker td.in-range:first-child:not(.start-date) {
+  border-radius: 99px 0 0 99px;
+}
+.daterangepicker td.in-range:last-child:not(.start-date) {
+  border-radius: 0 99px 99px 0;
+}
 .daterangepicker td.start-date {
-  border-radius: 4px 0 0 4px;
+  border-radius: 99px;
+}
+.daterangepicker td.start-date.select-done {
+  border-radius: 99px 0 0 99px;
 }
 
 .daterangepicker td.end-date {
-  border-radius: 0 4px 4px 0;
+  border-radius: 99px;
+}
+.daterangepicker td.end-date.select-done {
+  border-radius: 0 99px 99px 0;
 }
 
 .daterangepicker td.start-date.end-date {
-  border-radius: 4px;
+  border-radius: 99px;
 }
 
 .daterangepicker td.active, .daterangepicker td.active:hover {
@@ -216,12 +235,14 @@
 
 .daterangepicker th.month {
   width: auto;
+  color: #5e6163;
+  opacity: 1;
 }
 
 .daterangepicker td.disabled, .daterangepicker option.disabled {
-  color: #999;
+  color: #5e6163;
   cursor: not-allowed;
-  text-decoration: line-through;
+  opacity: 0.4;
 }
 
 .daterangepicker select.monthselect, .daterangepicker select.yearselect {
@@ -330,7 +351,7 @@
 }
 
 .daterangepicker .ranges li.active {
-  background-color: #08c;
+  background-color: #386cf6;
   color: #fff;
 }
 
