--- a/daterangepicker.css
+++ b/daterangepicker.css
@@ -228,6 +228,8 @@
   background-color: #fff;
   border-color: transparent;
   color: #999;
+  opacity: 0.4;
+  cursor: not-allowed;
 }
 
 .daterangepicker td.in-range {
@@ -277,10 +279,10 @@
   opacity: 1;
 }
 
-.daterangepicker td.disabled, .daterangepicker option.disabled {
+.daterangepicker td.ends.disabled, .daterangepicker option.ends.disabled {
   color: #5e6163;
   cursor: not-allowed;
-  opacity: 0.4;
+  opacity: 0;
 }
 
 .daterangepicker select.monthselect, .daterangepicker select.yearselect {
